[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "polyTEM"
authors = [{name = "Christina Cheng", email = "chxcheng@stanford.edu"}]
requires-python = ">= 3.9"
dynamic = ["version", "description"]
classifiers = [
    "Private :: Do Not Upload",
]
dependencies = [
    "torch~=1.13",
    "shapely~=2.0",
    "alphashape==1.3.1",
    "geopandas<=1.0",
    "opencv-python>=4.7",
    "pillow<10.0",
    "pandas>=1.5",
    "lmfit>=1.2",
    "mrcfile>=1.4",
    "matplotlib>=3.6",
    "numpy>=2.0",
    "scipy>=1.10",
    "tqdm",
    "scikit-image>=0.19",
    "multiprocess>=0.70"
    "sparse>=0.13",
    "seaborn>=0.12",
    "hdbscan>=0.8",
    "dill>=0.3",
    "jsonpickle>=3.0"
]
    
